--- a/Pets/Pets/Base.lproj/Main.storyboard
+++ b/Pets/Pets/Base.lproj/Main.storyboard
@@ -283,7 +283,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vIC-dG-ivV">
-                                <rect key="frame" x="29" y="261" width="41" height="30"/>
+                                <rect key="frame" x="16" y="237" width="41" height="30"/>
                                 <state key="normal" title="Home">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -292,7 +292,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jr7-Nt-bY1">
-                                <rect key="frame" x="29" y="299" width="77" height="30"/>
+                                <rect key="frame" x="16" y="275" width="77" height="30"/>
                                 <state key="normal" title="Your Offers">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -301,7 +301,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kGc-SP-0Py">
-                                <rect key="frame" x="29" y="337" width="66" height="30"/>
+                                <rect key="frame" x="16" y="313" width="66" height="30"/>
                                 <state key="normal" title="Your Bids">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -310,7 +310,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cAe-N9-tr0">
-                                <rect key="frame" x="29" y="375" width="49" height="30"/>
+                                <rect key="frame" x="16" y="351" width="49" height="30"/>
                                 <state key="normal" title="Logout">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -319,19 +319,19 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Phone No." lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rj3-DR-Lie">
-                                <rect key="frame" x="161" y="182" width="301" height="21"/>
+                                <rect key="frame" x="161" y="162" width="301" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OJO-PU-qK1">
-                                <rect key="frame" x="161" y="108" width="301" height="21"/>
+                                <rect key="frame" x="161" y="88" width="301" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="crw-Ba-hwH">
-                                <rect key="frame" x="161" y="145" width="301" height="21"/>
+                                <rect key="frame" x="161" y="125" width="301" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="301" id="dn5-Is-OIB"/>
                                 </constraints>
@@ -340,7 +340,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SxT-FF-ZNO">
-                                <rect key="frame" x="16" y="96" width="137" height="157"/>
+                                <rect key="frame" x="16" y="72" width="137" height="157"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="137" id="nOe-lE-MAt"/>
                                 </constraints>
@@ -349,11 +349,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="rj3-DR-Lie" firstAttribute="top" secondItem="crw-Ba-hwH" secondAttribute="bottom" constant="16" id="6Fg-yv-Sfj"/>
-                            <constraint firstItem="SxT-FF-ZNO" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="32" id="6G2-7k-gXI"/>
+                            <constraint firstItem="SxT-FF-ZNO" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="8" id="6G2-7k-gXI"/>
                             <constraint firstItem="crw-Ba-hwH" firstAttribute="trailing" secondItem="OJO-PU-qK1" secondAttribute="trailing" id="CWu-1m-AZa"/>
-                            <constraint firstItem="OJO-PU-qK1" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="44" id="Ff6-d2-kuj"/>
+                            <constraint firstItem="OJO-PU-qK1" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="24" id="Ff6-d2-kuj"/>
                             <constraint firstItem="kGc-SP-0Py" firstAttribute="top" secondItem="jr7-Nt-bY1" secondAttribute="bottom" constant="8" symbolic="YES" id="Lge-MK-oYS"/>
-                            <constraint firstItem="vIC-dG-ivV" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="197" id="Sla-98-LOQ"/>
+                            <constraint firstItem="vIC-dG-ivV" firstAttribute="top" secondItem="s1s-0C-gZn" secondAttribute="bottom" constant="173" id="Sla-98-LOQ"/>
                             <constraint firstItem="cAe-N9-tr0" firstAttribute="top" secondItem="kGc-SP-0Py" secondAttribute="bottom" constant="8" symbolic="YES" id="VgL-AI-wu1"/>
                             <constraint firstItem="kGc-SP-0Py" firstAttribute="leading" secondItem="cAe-N9-tr0" secondAttribute="leading" id="XZ2-GO-URo"/>
                             <constraint firstItem="crw-Ba-hwH" firstAttribute="trailing" secondItem="rj3-DR-Lie" secondAttribute="trailing" id="YkO-qN-2wu"/>
@@ -366,7 +366,7 @@
                             <constraint firstItem="crw-Ba-hwH" firstAttribute="leading" secondItem="n1b-0S-AKI" secondAttribute="leading" constant="161" id="qMS-PT-iDr"/>
                             <constraint firstItem="vIC-dG-ivV" firstAttribute="leading" secondItem="jr7-Nt-bY1" secondAttribute="leading" id="qQl-ds-dZY"/>
                             <constraint firstItem="crw-Ba-hwH" firstAttribute="top" secondItem="OJO-PU-qK1" secondAttribute="bottom" constant="16" id="uh3-pS-Jch"/>
-                            <constraint firstItem="SxT-FF-ZNO" firstAttribute="leading" secondItem="vIC-dG-ivV" secondAttribute="leading" constant="-13" id="vRz-WV-axW"/>
+                            <constraint firstItem="SxT-FF-ZNO" firstAttribute="leading" secondItem="vIC-dG-ivV" secondAttribute="leading" id="vRz-WV-axW"/>
                         </constraints>
                     </view>
                     <connections>
