--- a/Pets/Pets/OfferUITableViewCell.xib
+++ b/Pets/Pets/OfferUITableViewCell.xib
@@ -2,39 +2,58 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="OfferUITableViewCell" rowHeight="128" id="ErO-M3-UQb" customClass="OfferUITableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="554" height="128"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="8" reuseIdentifier="OfferUITableViewCell" rowHeight="96" id="ErO-M3-UQb" customClass="OfferUITableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="543" height="96"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ErO-M3-UQb" id="CLl-If-RIW">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0d-e7-Ccl">
-                        <rect key="frame" x="172" y="8" width="110" height="21"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8E6-O2-EDI">
+                        <rect key="frame" x="0.0" y="0.0" width="134" height="96"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="134" id="evr-Hy-Lv4"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0d-e7-Ccl">
+                        <rect key="frame" x="142" y="8" width="110" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="110" id="zVM-NZ-UEB"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8E6-O2-EDI">
-                        <rect key="frame" x="0.0" y="0.0" width="164" height="130"/>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKj-Q4-Lnk">
-                        <rect key="frame" x="172" y="37" width="115" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKj-Q4-Lnk">
+                        <rect key="frame" x="142" y="37" width="115" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="115" id="gQX-Oa-FRh"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="8E6-O2-EDI" firstAttribute="leading" secondItem="CLl-If-RIW" secondAttribute="leading" id="5eW-du-bbI"/>
+                    <constraint firstItem="gKj-Q4-Lnk" firstAttribute="top" secondItem="P0d-e7-Ccl" secondAttribute="bottom" constant="8" symbolic="YES" id="EMJ-d2-SQP"/>
+                    <constraint firstItem="P0d-e7-Ccl" firstAttribute="leading" secondItem="8E6-O2-EDI" secondAttribute="trailing" constant="8" symbolic="YES" id="TDK-HE-NSR"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="8E6-O2-EDI" secondAttribute="bottom" constant="-9" id="laM-9D-2RR"/>
+                    <constraint firstItem="P0d-e7-Ccl" firstAttribute="leading" secondItem="gKj-Q4-Lnk" secondAttribute="leading" id="qCu-vb-hRz"/>
+                    <constraint firstItem="8E6-O2-EDI" firstAttribute="top" secondItem="CLl-If-RIW" secondAttribute="top" id="xSQ-7y-LXI"/>
+                    <constraint firstItem="P0d-e7-Ccl" firstAttribute="top" secondItem="CLl-If-RIW" secondAttribute="topMargin" id="y9t-cu-hei"/>
+                </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="image" destination="8E6-O2-EDI" id="dzJ-ho-xPa"/>
                 <outlet property="labelPrice" destination="gKj-Q4-Lnk" id="UjL-Qp-ARZ"/>
                 <outlet property="labelTItle" destination="P0d-e7-Ccl" id="zXv-Ns-mbQ"/>
             </connections>
-            <point key="canvasLocation" x="303" y="93"/>
+            <point key="canvasLocation" x="303.5" y="82"/>
         </tableViewCell>
     </objects>
 </document>
