--- a/Pets/Pets/OfferUITableViewCell.xib
+++ b/Pets/Pets/OfferUITableViewCell.xib
@@ -8,28 +8,22 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="8" reuseIdentifier="OfferUITableViewCell" rowHeight="96" id="ErO-M3-UQb" customClass="OfferUITableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="543" height="96"/>
+            <rect key="frame" x="0.0" y="0.0" width="463" height="96"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ErO-M3-UQb" id="CLl-If-RIW">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8E6-O2-EDI">
-                        <rect key="frame" x="0.0" y="0.0" width="134" height="96"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="134" id="evr-Hy-Lv4"/>
-                        </constraints>
-                    </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0d-e7-Ccl">
-                        <rect key="frame" x="142" y="8" width="110" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P0d-e7-Ccl">
+                        <rect key="frame" x="130" y="7" width="110" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="110" id="zVM-NZ-UEB"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <fontDescription key="fontDescription" name="KohinoorDevanagari-Medium" family="Kohinoor Devanagari" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKj-Q4-Lnk">
-                        <rect key="frame" x="142" y="37" width="115" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Price" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gKj-Q4-Lnk">
+                        <rect key="frame" x="130" y="65" width="115" height="21"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="115" id="gQX-Oa-FRh"/>
                         </constraints>
@@ -37,15 +31,32 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" tag="1" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vHW-tJ-h6J">
+                        <rect key="frame" x="292" y="7" width="163" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="163" id="cI6-pA-Aj8"/>
+                        </constraints>
+                        <state key="normal" title="See contact info">
+                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
+                    </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8E6-O2-EDI">
+                        <rect key="frame" x="0.0" y="0.0" width="122" height="96"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="122" id="evr-Hy-Lv4"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="trailingMargin" secondItem="vHW-tJ-h6J" secondAttribute="trailing" id="3Lf-M8-l8c"/>
                     <constraint firstItem="8E6-O2-EDI" firstAttribute="leading" secondItem="CLl-If-RIW" secondAttribute="leading" id="5eW-du-bbI"/>
-                    <constraint firstItem="gKj-Q4-Lnk" firstAttribute="top" secondItem="P0d-e7-Ccl" secondAttribute="bottom" constant="8" symbolic="YES" id="EMJ-d2-SQP"/>
-                    <constraint firstItem="P0d-e7-Ccl" firstAttribute="leading" secondItem="8E6-O2-EDI" secondAttribute="trailing" constant="8" symbolic="YES" id="TDK-HE-NSR"/>
+                    <constraint firstItem="gKj-Q4-Lnk" firstAttribute="top" secondItem="P0d-e7-Ccl" secondAttribute="bottom" constant="37" id="EMJ-d2-SQP"/>
+                    <constraint firstItem="vHW-tJ-h6J" firstAttribute="centerY" secondItem="gKj-Q4-Lnk" secondAttribute="centerY" constant="-58" id="G5L-vm-uQt"/>
+                    <constraint firstItem="P0d-e7-Ccl" firstAttribute="leading" secondItem="8E6-O2-EDI" secondAttribute="trailing" constant="8" id="TDK-HE-NSR"/>
                     <constraint firstAttribute="bottomMargin" secondItem="8E6-O2-EDI" secondAttribute="bottom" constant="-9" id="laM-9D-2RR"/>
                     <constraint firstItem="P0d-e7-Ccl" firstAttribute="leading" secondItem="gKj-Q4-Lnk" secondAttribute="leading" id="qCu-vb-hRz"/>
                     <constraint firstItem="8E6-O2-EDI" firstAttribute="top" secondItem="CLl-If-RIW" secondAttribute="top" id="xSQ-7y-LXI"/>
-                    <constraint firstItem="P0d-e7-Ccl" firstAttribute="top" secondItem="CLl-If-RIW" secondAttribute="topMargin" id="y9t-cu-hei"/>
+                    <constraint firstItem="P0d-e7-Ccl" firstAttribute="top" secondItem="CLl-If-RIW" secondAttribute="topMargin" constant="-1" id="y9t-cu-hei"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -53,7 +64,7 @@
                 <outlet property="labelPrice" destination="gKj-Q4-Lnk" id="UjL-Qp-ARZ"/>
                 <outlet property="labelTItle" destination="P0d-e7-Ccl" id="zXv-Ns-mbQ"/>
             </connections>
-            <point key="canvasLocation" x="303.5" y="82"/>
+            <point key="canvasLocation" x="263.5" y="78"/>
         </tableViewCell>
     </objects>
 </document>
