--- a/Pets/Pets/OfferBidsUITableViewCell.xib
+++ b/Pets/Pets/OfferBidsUITableViewCell.xib
@@ -18,12 +18,19 @@
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="(approved)" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qTu-rh-bYV">
+                        <rect key="frame" x="234" y="15" width="86" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.2286934799" green="1" blue="0.02846861874" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="labelApproved" destination="qTu-rh-bYV" id="tMz-tP-c5W"/>
                 <outlet property="labelName" destination="Bod-bc-rDR" id="sBO-Ip-l8d"/>
             </connections>
-            <point key="canvasLocation" x="263" y="158"/>
+            <point key="canvasLocation" x="263" y="157"/>
         </tableViewCell>
     </objects>
 </document>
