--- a/Pets/Pets/Base.lproj/LaunchScreen.xib
+++ b/Pets/Pets/Base.lproj/LaunchScreen.xib
@@ -23,19 +23,31 @@
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pets2.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="B7I-pO-iSO">
+                    <rect key="frame" x="0.0" y="211" width="480" height="146"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="146" id="akM-C4-ZMI"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
+                <constraint firstItem="B7I-pO-iSO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="97f-Ht-tW5"/>
+                <constraint firstItem="B7I-pO-iSO" firstAttribute="top" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="28" id="GBh-ls-cPg"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="B7I-pO-iSO" firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="u9f-Dv-aLv"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="pets2.jpg" width="396" height="127"/>
+    </resources>
 </document>
